--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -61,7 +61,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-                app:navGraph="@navigation/mobile_navigation" />
+                app:navGraph="@navigation/nav_main" />
 
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
