--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,7 +16,6 @@
         android:layout_height="match_parent"
         tools:context=".ui.home.HomeFragment">
 
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="0dp"
@@ -27,6 +26,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:itemCount="20"
+            app:adapter="@{viewModel.homeAdapter}"
             tools:listitem="@layout/item_home" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
