--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -9,7 +9,11 @@
         android:id="@+id/navigation_home"
         android:name="com.zoyo.mvvmkotlindemo.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_pageFragment"
+            app:destination="@id/pageFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_dashboard"
@@ -30,4 +34,8 @@
     <action
         android:id="@+id/action_global_navigation_search"
         app:destination="@id/navigation_search" />
+    <fragment
+        android:id="@+id/pageFragment"
+        android:name="com.zoyo.mvvmkotlindemo.ui.page.PageFragment"
+        android:label="PageFragment" />
 </navigation>
