--- a/app/src/main/res/layout/item_page.xml
+++ b/app/src/main/res/layout/item_page.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginStart="12dp"
+    android:layout_marginTop="3dp"
+    android:layout_marginEnd="12dp"
+    android:layout_marginBottom="3dp"
+    app:cardCornerRadius="4dp"
+    app:contentPadding="3dp">
 
     <TextView
         android:id="@+id/tvName"
