page分页-数据源:网络

--- a/app/src/main/res/layout/fragment_page_network.xml
+++ b/app/src/main/res/layout/fragment_page_network.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.zoyo.mvvmkotlindemo.ui.page.page.PageViewModel" />
+            type="com.zoyo.mvvmkotlindemo.ui.page.page2.PageWithNetworkViewModel" />
 
     </data>
 
