--- a/app/src/main/res/layout/fragment_page_network.xml
+++ b/app/src/main/res/layout/fragment_page_network.xml
@@ -61,7 +61,7 @@
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:listitem="@layout/item_page" />
+                tools:listitem="@layout/item_page_network" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
