--- a/app/src/main/res/layout/item_page_network.xml
+++ b/app/src/main/res/layout/item_page_network.xml
@@ -9,13 +9,13 @@
     android:layout_marginEnd="12dp"
     android:layout_marginBottom="3dp"
     app:cardCornerRadius="4dp"
-    app:contentPadding="3dp">
+    app:contentPadding="6dp">
 
     <TextView
         android:id="@+id/tvTitle"
         style="@style/TextAppearance.AppCompat.Title"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:ellipsize="end"
         android:lines="1"
         tools:text="title" />
@@ -24,8 +24,9 @@
         android:id="@+id/tvContent"
         style="@style/TextAppearance.AppCompat.Body1"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:layout_marginBottom="30dp"
         tools:text="content" />
 
     <TextView
@@ -34,7 +35,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:layout_marginTop="100dp"
         tools:text="language" />
 
     <TextView
