--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="week_Title_text_size">16sp</dimen>
+    <dimen name="day_text_size">16sp</dimen>
+    <dimen name="day_cell_hight">50dp</dimen>
+    <dimen name="day_cell_width">40dp</dimen>
 </resources>
