--- a/app/src/main/res/layout/fragment_canvas.xml
+++ b/app/src/main/res/layout/fragment_canvas.xml
@@ -14,31 +14,76 @@
             android:id="@+id/btStart"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:text="start" />
+            android:text="@string/start" />
 
-
-        <com.zoyo.mvvmkotlindemo.ui.canvas.SuperLoadingProgressView
+        <com.zoyo.mvvmkotlindemo.ui.view.SuperLoadingProgressView
             android:id="@+id/loadingProgress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <!--        <com.zoyo.mvvmkotlindemo.ui.canvas.PathView-->
+        <com.zoyo.mvvmkotlindemo.ui.view.RadarView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/black_overlay" />
+
+        <com.zoyo.mvvmkotlindemo.ui.view.RoundImageView
+            android:id="@+id/id_qiqiu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:src="@drawable/avatar" />
+
+        <com.zoyo.mvvmkotlindemo.ui.view.RoundImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_margin="10dp"
+            android:src="@drawable/avatar" />
+
+        <com.zoyo.mvvmkotlindemo.ui.view.RoundImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:src="@drawable/avatar" />
+
+        <com.zoyo.mvvmkotlindemo.ui.view.RoundImageView
+            android:id="@+id/id_meinv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:src="@drawable/avatar"
+            app:borderRadius="20dp"
+            app:type="round" />
+
+        <com.zoyo.mvvmkotlindemo.ui.view.RoundImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:src="@drawable/avatar"
+            app:borderRadius="40dp"
+            app:type="round" />
+
+        <com.zoyo.mvvmkotlindemo.ui.view.RoundImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:src="@drawable/avatar"
+            app:borderRadius="60dp"
+            app:type="round" />
+
+
+<!--        <com.zoyo.mvvmkotlindemo.ui.view.PathView-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="100dp" />-->
+
+        <!--        <com.zoyo.mvvmkotlindemo.ui.view.TextDrawView-->
         <!--            android:layout_width="match_parent"-->
         <!--            android:layout_height="wrap_content" />-->
 
-        <!--        <com.zoyo.mvvmkotlindemo.ui.canvas.RadarView-->
+        <!--        <com.zoyo.mvvmkotlindemo.ui.view.RegionView-->
         <!--            android:layout_width="match_parent"-->
         <!--            android:layout_height="wrap_content" />-->
 
-        <!--        <com.zoyo.mvvmkotlindemo.ui.canvas.TextDrawView-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content" />-->
-
-        <!--        <com.zoyo.mvvmkotlindemo.ui.canvas.RegionView-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content" />-->
-
-        <!--        <com.zoyo.mvvmkotlindemo.ui.canvas.CanvasBasicView-->
+        <!--        <com.zoyo.mvvmkotlindemo.ui.view.CanvasBasicView-->
         <!--            android:layout_width="match_parent"-->
         <!--            android:layout_height="wrap_content" />-->
 
