添加自定义控件

--- a/app/src/main/res/layout/fragment_canvas.xml
+++ b/app/src/main/res/layout/fragment_canvas.xml
@@ -10,6 +10,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <com.zoyo.mvvmkotlindemo.ui.view.spider.SpiderView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:pointNum="50"
+            app:pointRadius="3dp" />
+
         <Button
             android:id="@+id/btStart"
             android:layout_width="match_parent"
@@ -21,57 +27,57 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <com.zoyo.mvvmkotlindemo.ui.view.RadarView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/black_overlay" />
+        <!--        <com.zoyo.mvvmkotlindemo.ui.view.RadarView-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:background="@color/black_overlay" />-->
 
-        <com.zoyo.mvvmkotlindemo.ui.view.RoundImageView
-            android:id="@+id/id_qiqiu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:src="@drawable/avatar" />
+        <!--        <com.zoyo.mvvmkotlindemo.ui.view.RoundImageView-->
+        <!--            android:id="@+id/id_qiqiu"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_margin="10dp"-->
+        <!--            android:src="@drawable/avatar" />-->
 
-        <com.zoyo.mvvmkotlindemo.ui.view.RoundImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_margin="10dp"
-            android:src="@drawable/avatar" />
+        <!--        <com.zoyo.mvvmkotlindemo.ui.view.RoundImageView-->
+        <!--            android:layout_width="200dp"-->
+        <!--            android:layout_height="200dp"-->
+        <!--            android:layout_margin="10dp"-->
+        <!--            android:src="@drawable/avatar" />-->
 
-        <com.zoyo.mvvmkotlindemo.ui.view.RoundImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:src="@drawable/avatar" />
+        <!--        <com.zoyo.mvvmkotlindemo.ui.view.RoundImageView-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_margin="10dp"-->
+        <!--            android:src="@drawable/avatar" />-->
 
-        <com.zoyo.mvvmkotlindemo.ui.view.RoundImageView
-            android:id="@+id/id_meinv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:src="@drawable/avatar"
-            app:borderRadius="20dp"
-            app:type="round" />
+        <!--        <com.zoyo.mvvmkotlindemo.ui.view.RoundImageView-->
+        <!--            android:id="@+id/id_meinv"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_margin="10dp"-->
+        <!--            android:src="@drawable/avatar"-->
+        <!--            app:borderRadius="20dp"-->
+        <!--            app:type="round" />-->
 
-        <com.zoyo.mvvmkotlindemo.ui.view.RoundImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:src="@drawable/avatar"
-            app:borderRadius="40dp"
-            app:type="round" />
+        <!--        <com.zoyo.mvvmkotlindemo.ui.view.RoundImageView-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_margin="10dp"-->
+        <!--            android:src="@drawable/avatar"-->
+        <!--            app:borderRadius="40dp"-->
+        <!--            app:type="round" />-->
 
-        <com.zoyo.mvvmkotlindemo.ui.view.RoundImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:src="@drawable/avatar"
-            app:borderRadius="60dp"
-            app:type="round" />
+        <!--        <com.zoyo.mvvmkotlindemo.ui.view.RoundImageView-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_margin="10dp"-->
+        <!--            android:src="@drawable/avatar"-->
+        <!--            app:borderRadius="60dp"-->
+        <!--            app:type="round" />-->
 
 
-<!--        <com.zoyo.mvvmkotlindemo.ui.view.PathView-->
+        <!--        <com.zoyo.mvvmkotlindemo.ui.view.PathView-->
         <!--            android:layout_width="match_parent"-->
         <!--            android:layout_height="100dp" />-->
 
