--- a/app/src/main/res/layout/fragment_canvas.xml
+++ b/app/src/main/res/layout/fragment_canvas.xml
@@ -10,22 +10,34 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <com.zoyo.mvvmkotlindemo.ui.view.spider.SpiderView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:pointNum="50"
-            app:pointRadius="3dp" />
+        <!--        <com.zoyo.mvvmkotlindemo.ui.view.pie.PieChartView-->
+        <!--            android:id="@+id/pieView"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content" />-->
 
-        <Button
-            android:id="@+id/btStart"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="@string/start" />
-
-        <com.zoyo.mvvmkotlindemo.ui.view.SuperLoadingProgressView
-            android:id="@+id/loadingProgress"
+        <com.zoyo.mvvmkotlindemo.ui.view.pie.RingChartView
+            android:id="@+id/ringView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+
+        <!--        <com.zoyo.mvvmkotlindemo.ui.view.spider.SpiderView-->
+        <!--            android:id="@+id/spiderView"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="match_parent"-->
+        <!--            app:pointNum="50"-->
+        <!--            app:pointRadius="3dp" />-->
+
+        <!--                <Button-->
+        <!--                    android:id="@+id/btStart"-->
+        <!--                    android:layout_width="match_parent"-->
+        <!--                    android:layout_height="40dp"-->
+        <!--                    android:text="@string/start" />-->
+
+        <!--                <com.zoyo.mvvmkotlindemo.ui.view.SuperLoadingProgressView-->
+        <!--                    android:id="@+id/loadingProgress"-->
+        <!--                    android:layout_width="match_parent"-->
+        <!--                    android:layout_height="wrap_content" />-->
 
         <!--        <com.zoyo.mvvmkotlindemo.ui.view.RadarView-->
         <!--            android:layout_width="wrap_content"-->
